# loopforge-gemini-override-v4

./: README.md  main.py  pyproject.toml  pytest.ini
bookmark_manager/: __init__.py  cli.py  config.py  database.py  exceptions.py  formatters.py  html_parser.py  models.py  repository.py  service.py
tests/: __init__.py  conftest.py  test_cli.py  test_database.py  test_exceptions.py  test_html_parser.py  test_models.py  test_repository.py  test_service.py
